welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:10: error: not found: value Direction
  if (dir==Direction.EAST) {
           ^